# growthcurves_app

./: .bumpversion-autogrowth.toml  .bumpversion-microgrowth.toml  .bumpversion-piogrowth.toml  .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: cicd.yml  test_piogrowth_app.yml
AutoGrowth/: 0_data_dashboard.py  0_downloads.py  0_select_data.py  0_upload_data.py  1_batch_analysis.py  2_turbiostat.py  3_comparative_plots.py  README.md  app.py  growthcurves_options.py  process_data.py
AutoGrowth/data/: README.md
AutoGrowth/markdowns/: about.md
MicroGrowth/: README.md  app.py  environment.yaml  requirements.txt
MicroGrowth/.streamlit/: config.toml
MicroGrowth/example_data/: example_data.xlsx  example_long_form_plate_map.xls  example_plate_map.xls  freddy_data.xlsx  freddy_plate_map.xls  serine_data.xlsx  serinemap.xlsx
MicroGrowth/src/: styling.py
MicroGrowth/src/functions/: check_growth_fits.py  common.py  constants.py  data_processing.py  export_functions.py  fitting_pipeline.py  info_plots.py  plotting_functions.py  session_io.py  upload_functions.py  visualization_functions.py
MicroGrowth/src/pages/: check_growth_fits.py  create_visualizations.py  download_analyzed_data.py  plate_overviews.py  upload_and_analyse.py
MicroGrowth/src/ui_functions/: blank_grouping_ui.py  check_growth_fits_ui.py  create_visualizations_ui.py  download_analyzed_data_ui.py  plate_overviews_ui.py  ui_components.py  (+1 more)
PioGrowth/: 0_data_dashboard.py  0_downloads.py  0_select_data.py  0_upload_data.py  1_batch_analysis.py  2_turbiostat.py  3_comparative_plots.py  app.py  growthcurves_options.py  names.py  plots.py
PioGrowth/markdowns/: about.md  curve_fitting.md
PioGrowth/ui_tests/: test_0_upload_data.py
app/: README.md  buttons.py  main.py  ui_components.py
data/: .gitignore  README.md
data/batch_example/: example_batch_data_od_readings.csv  example_batch_data_od_readings_calibration.csv
data/turbidostat_bacillus/: 06_25_Bacillus_turbidostat_Calibration.csv  06_25_Bacillus_turbidostat_OD.csv  06_25_Bacillus_turbidostat_OD_dosing_events.csv
data/turbidostat_example/: example_2-Pio_Experiment_dilution_events.csv  example_2_Pio_Experiment_od_readings.csv
docs/: README.md  conf.py  index.html  index.md
src/growthcurve_app/: __init__.py  convert_qurve.py  load.py  session_state.py
src/piogrowth/: __init__.py  analyze.py  convert_qurve.py  durations.py  filter.py  fit_growthcurves.py  fit_spline.py  load.py  session_state.py  styling.py  turbistat.py
tests/: test_pkg.py
